--- a/index.html
+++ b/index.html
@@ -1,63 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Grupo Infotech IT</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Infotech - Soluções em Informática</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>Infotech</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<header>
-  <img src="logo.png" alt="Logo Grupo Infotech IT" width="150" />
-  <h1>Grupo Infotech IT</h1>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="servicos.html">Serviços</a></li>
-      <li><a href="#contato">Contato</a></li>
-    </ul>
-  </nav>
-</header>
+  <section id="home">
+    <h2>Bem-vindo à Infotech</h2>
+    <p>Oferecemos soluções completas em informática para você e sua empresa.</p>
+  </section>
 
-<section id="home" class="animate">
-  <h2>Bem-vindo ao Grupo Infotech IT</h2>
-  <p>
-    Soluções completas em informática para você e sua empresa. Profissionalismo, agilidade e qualidade em cada serviço.
-  </p>
-  <p>
-    Navegue pelo nosso site para conhecer os serviços que oferecemos e entre em contato conosco.
-  </p>
-</section>
+  <section id="contato">
+    <h2>Contato</h2>
+    <form action="https://formspree.io/f/mgepybqe" method="POST">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="_replyto" required>
+      <label for="mensagem">Mensagem:</label>
+      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
 
-<section id="contato" class="animate">
-  <h2>Contato</h2>
-  <form action="https://formspree.io/f/mgepybqe" method="POST">
-    <label for="nome">Nome:</label><br />
-    <input type="text" id="nome" name="nome" required /><br />
+  <footer>
+    <p>&copy; 2025 Infotech | <a href="https://www.instagram.com/grupoinfotechit/" target="_blank">Instagram</a></p>
+  </footer>
 
-    <label for="email">Email:</label><br />
-    <input type="email" id="email" name="_replyto" required /><br />
+  <a href="https://wa.me/5569992331200" class="whatsapp-float" target="_blank" title="Fale conosco pelo WhatsApp">
+    💬 Fale Conosco
+  </a>
 
-    <label for="mensagem">Mensagem:</label><br />
-    <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br />
-
-    <button type="submit">Enviar</button>
-  </form>
-</section>
-
-<footer>
-  <p>
-    &copy; 2025 Grupo Infotech IT | <a href="https://www.instagram.com/grupoinfotechit/" target="_blank"
-      >Instagram</a
-    >
-  </p>
-</footer>
-
-<a href="https://wa.me/5569992331200" class="whatsapp-float" target="_blank" title="Fale conosco pelo WhatsApp">
-  💬 Fale Conosco
-</a>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
