--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Infotech - Soluções em Informática</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Serviços - Infotech</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -18,22 +18,40 @@
     </nav>
   </header>
 
-  <section id="home">
-    <h2>Bem-vindo à Infotech</h2>
-    <p>Oferecemos soluções completas em informática para você e sua empresa.</p>
-  </section>
-
-  <section id="contato">
-    <h2>Contato</h2>
-    <form action="https://formspree.io/f/mgepybqe" method="POST">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="_replyto" required>
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
+  <section id="servicos">
+    <h2>Nossos Serviços</h2>
+    <article>
+      <h3>🔧 Manutenção de Computadores e Notebooks</h3>
+      <p>Realizamos diagnósticos precisos e reparos eficientes para garantir o funcionamento ideal dos seus equipamentos.</p>
+    </article>
+    <article>
+      <h3>💾 Formatação e Instalação de Softwares</h3>
+      <p>Preparamos seu sistema para operar com máxima performance, instalando os programas essenciais de forma segura e personalizada.</p>
+    </article>
+    <article>
+      <h3>🖥️ Venda de Peças e Acessórios de Informática</h3>
+      <p>Oferecemos produtos de qualidade e procedência garantida, com orientação especializada para você fazer a melhor escolha.</p>
+    </article>
+    <article>
+      <h3>🌐 Redes e Infraestrutura de TI</h3>
+      <p>Projetamos e implementamos redes eficientes e seguras, assegurando conectividade estável e suporte contínuo para o seu negócio.</p>
+    </article>
+    <article>
+      <h3>🔍 Recuperação de Dados</h3>
+      <p>Utilizamos técnicas avançadas para recuperar arquivos importantes perdidos em HDs, SSDs e outros dispositivos de armazenamento.</p>
+    </article>
+    <article>
+      <h3>🛠️ Suporte Técnico Especializado</h3>
+      <p>Atendimento ágil e profissional, presencial ou remoto, solucionando problemas e orientando usuários com total eficiência.</p>
+    </article>
+    <article>
+      <h3>🖨️ Manutenção de Impressoras (HP, Epson e outras)</h3>
+      <p>Realizamos manutenção preventiva e corretiva, garantindo o pleno funcionamento e prolongando a vida útil do seu equipamento.</p>
+    </article>
+    <article>
+      <h3>💻 Suporte Remoto e Instalação de Programas</h3>
+      <p>Soluções práticas e rápidas, com atendimento remoto para instalação de softwares e resolução de problemas sem sair de casa ou do escritório.</p>
+    </article>
   </section>
 
   <footer>
